Improved the business logic